// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/CheckBox CheckBox with Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={false}
            className="css-bkei5x-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Not checked single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={true}
            className="css-1yq1675-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Checked Single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-1mci7ch-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={true}
            className="css-1yq1675-CheckBox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Disabled single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={true}
            className="css-7smy38-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Checked intermediate
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={false}
            className="css-nrxs4k-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Not checked intermediate
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-1mci7ch-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={true}
            className="css-7smy38-CheckBox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-howegt-CheckBox"
        >
          Disabled checked intermediate
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/CheckBox CheckBox without 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={true}
            className="css-1yq1675-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={false}
            className="css-bkei5x-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={true}
            className="css-7smy38-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={false}
            className="css-nrxs4k-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-1mci7ch-CheckBox"
      >
        <span
          className="css-bdc5ng-CheckBox"
        >
          <input
            checked={false}
            className="css-nrxs4k-CheckBox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;
